fix: no overflow on mobile

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -3,16 +3,33 @@
  * Licensed under the Open Software License version 3.0
  */
 
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .main {
   .title {
     font-size: 4rem;
     font-weight: bold;
     text-transform: uppercase;
+    text-align: center;
+
+    @media (max-width: 600px) {
+      font-size: 2.5rem;
+    }
   }
 
   .subtitle {
     font-size: 4.25rem;
     font-weight: normal;
+    text-align: center;
+
+    @media (max-width: 600px) {
+      font-size: 1.5rem;
+    }
   }
 
   .socialLinks {
@@ -25,11 +42,13 @@
 
 .footer {
   position: absolute;
-  bottom: 1rem;
-  left: 50%;
-
-  transform: translateX(-50%);
+  margin-bottom: 1rem;
+  bottom: 0;
 
   text-align: center;
-  width: 600px;
+  max-width: 600px;
+
+  @media (max-width: 600px) {
+    left: auto;
+  }
 }
