--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,11 +13,6 @@ body {
 }
 
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-
   background: #000;
   color: #fff;
 }
